# Conceptify---AI-Powered-Learning-Platform

./: .gitignore  MODELS.md  README.md  index.html  package-lock.json  package.json  pyproject.toml
OCR/: Nougat.ipynb  Test.ipynb  Test1.ipynb
src/: App.css  App.jsx  index.css  main.jsx
src/backend/: ocr_wrapper.py  server.js
src/components/: ChatbotPage.jsx  Dashboard.jsx  LandingPage.jsx  LoginPage.jsx  Navbar.jsx  OcrPage.jsx  OcrResultPage.jsx  SettingsPage.jsx  Sidebar.jsx  SignupPage.jsx  TakeTestPage.jsx  TestPage.jsx  TestResultPage.jsx
src/styles/: Auth.css  ChatbotPage.css  Dashboard.css  LandingPage.css  MainLayout.css  Navbar.css  OcrPage.css  OcrResultPage.css  SettingsPage.css  Sidebar.css  TakeTestPage.css  TestPage.css  TestResultPage.css  styles.js
