[project]
name = "conceptify-ai-powered-learning-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "ipykernel>=6.30.1",
    "nltk>=3.9.1",
    "opencv-python>=4.12.0.88",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.7",
    "pillow>=11.3.0",
    "pymupdf>=1.26.4",
    "pytesseract>=0.3.13",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.56.2",
]
